--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 
   <body>
 
-  <p><center><font size="4">Stephen Lucas, Lead Creative Progammer for Composition Studies at UNT created this game and programmed the code in 
-      html, css, and javascript. I have taken Stephen's game and made it minimal in the style of Abstract Expressionsim of the post-war
-    era. During our term you will take this code and repurpose the game to create an aesthetic of your own. W and S control the left paddle;
-      the up and down arrows control the right paddle. I made the sounds as notes generated in audacity; the ambient sound is relatively low note 
-      (measured in Hz) with a Paulstretch effect.</font></center></p>
+  <p><center><font size="4">A relaxing, repetitive game designed to take the mind off daily stressors. 
+      Calming colors to limit eye strain, soothing sounds of a fireplace, and a background to invited 
+      thoughts of relaxing with a warm drink. W and S control the left paddle; the up and down arrows 
+      control the right paddle. </font></center></p>
     
     <div id="game">
       <div class="paddle" id="left-paddle"></div>
